--- a/main.css
+++ b/main.css
@@ -94,3 +94,76 @@ body {
     flex-direction: column;
     text-align: left;
   }
+  .form form{
+    display: grid;
+    grid-gap:20px;
+    margin-top:60px;
+  }
+  .form label{
+    font-size: 18px;
+    font-weight: 600;
+    padding-bottom: 15px;
+  }
+  .form input{
+    font-size: 18px;
+    color:#213053;
+    height: 60px;
+    padding:0px 0px 20px 20px;
+    border-radius: 15px;
+    border: none;
+  }
+  .form select{
+    font-size: 18px;
+    color:#213053;
+    height: 60px;
+    padding:0px 0px 20px 20px;
+    border-radius: 15px;
+    border: none;
+  }
+  .form__submit{
+    font-size: 18px;
+    font-weight: 600;
+    margin-top: 40px;
+  }
+  select {
+    appearance: none;
+  }
+  input {
+    outline: none;
+  }
+  button:hover{
+    background-color:#f6980;
+    box-shadow:0 16px 36px rgba(246 152 12 / 20%);
+    transition: margin-in 0,3s ease;
+  }
+footer{
+  margin-top: 90px;
+  margin-bottom: 90px;
+  margin-left: 20px;
+  margin-right: 20px;
+  font-size: 16px;
+  font-weight: 600;
+}
+.footer__container{
+  display:flex;
+  text-align: center;
+}
+.footer__copyright{
+  text-align: center;
+  opacity: 0.5;
+}
+.footer__group{
+  margin-right: 80px;
+}
+h3{
+  font-size: 16px;
+  opacity: 0.7;
+  padding-bottom: 30px;
+}
+.footer__links{
+  display:flex;
+  flex-direction: column;
+}
+a{
+  padding-bottom: 15px;
+}
